LAGrammarParser.py
# Generated from LAGrammar.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class LAGrammarParser ( Parser ):

    grammarFileName = "LAGrammar.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'algoritmo'", "'fim_algoritmo'", "';'", 
                     "'declare'", "','", "'fim_declare'", "'leia'", "'('", 
                     "')'", "'escreva'", "'<-'", "'se'", "'entao'", "'senao'", 
                     "'fim_se'", "'enquanto'", "'faca'", "'fim_enquanto'", 
                     "'para'", "'de'", "'ate'", "'passo'", "'fim_para'", 
                     "'+'", "'-'", "'*'", "'/'", "'literal'", "'inteiro'", 
                     "'real'", "'logico'", "'registro'", "'ponteiro'", "'.'", 
                     "'['", "']'", "'&'", "'e'", "'ou'", "'fim_registro'", 
                     "':'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "DOISPONTOS", "IDENT", "CADEIA", "LOGICO", 
                      "NUM_INT", "NUM_REAL", "WS", "COMMENTS", "ErrorChar" ]

    RULE_programa = 0
    RULE_declaracoes = 1
    RULE_decl_local_global = 2
    RULE_declaracao_local = 3
    RULE_declaracao_global = 4
    RULE_declaracoes_variaveis = 5
    RULE_declaracao_variavel = 6
    RULE_identificadores = 7
    RULE_corpo = 8
    RULE_comandos = 9
    RULE_comando = 10
    RULE_leia_cmd = 11
    RULE_escreva_cmd = 12
    RULE_atribuicao_cmd = 13
    RULE_chamada_funcao_cmd = 14
    RULE_argumentos = 15
    RULE_cmd_condicional = 16
    RULE_cmd_enquanto = 17
    RULE_cmd_para = 18
    RULE_expressao = 19
    RULE_literal = 20
    RULE_tipo = 21
    RULE_identificador = 22
    RULE_dimensao = 23
    RULE_valor = 24
    RULE_ponteiro = 25
    RULE_logico = 26
    RULE_registro = 27

    ruleNames =  [ "programa", "declaracoes", "decl_local_global", "declaracao_local", 
                   "declaracao_global", "declaracoes_variaveis", "declaracao_variavel", 
                   "identificadores", "corpo", "comandos", "comando", "leia_cmd", 
                   "escreva_cmd", "atribuicao_cmd", "chamada_funcao_cmd", 
                   "argumentos", "cmd_condicional", "cmd_enquanto", "cmd_para", 
                   "expressao", "literal", "tipo", "identificador", "dimensao", 
                   "valor", "ponteiro", "logico", "registro" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    T__36=37
    T__37=38
    T__38=39
    T__39=40
    DOISPONTOS=41
    IDENT=42
    CADEIA=43
    LOGICO=44
    NUM_INT=45
    NUM_REAL=46
    WS=47
    COMMENTS=48
    ErrorChar=49

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declaracoes(self):
            return self.getTypedRuleContext(LAGrammarParser.DeclaracoesContext,0)


        def corpo(self):
            return self.getTypedRuleContext(LAGrammarParser.CorpoContext,0)


        def getRuleIndex(self):
            return LAGrammarParser.RULE_programa

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrograma" ):
                listener.enterPrograma(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrograma" ):
                listener.exitPrograma(self)




    def programa(self):

        localctx = LAGrammarParser.ProgramaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_programa)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 56
            self.declaracoes()
            self.state = 57
            self.match(LAGrammarParser.T__0)
            self.state = 58
            self.corpo()
            self.state = 59
            self.match(LAGrammarParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclaracoesContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def decl_local_global(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LAGrammarParser.Decl_local_globalContext)
            else:
                return self.getTypedRuleContext(LAGrammarParser.Decl_local_globalContext,i)


        def getRuleIndex(self):
            return LAGrammarParser.RULE_declaracoes

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaracoes" ):
                listener.enterDeclaracoes(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaracoes" ):
                listener.exitDeclaracoes(self)




    def declaracoes(self):

        localctx = LAGrammarParser.DeclaracoesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_declaracoes)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 66
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==4:
                self.state = 61
                self.decl_local_global()
                self.state = 62
                self.match(LAGrammarParser.T__2)
                self.state = 68
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Decl_local_globalContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declaracao_local(self):
            return self.getTypedRuleContext(LAGrammarParser.Declaracao_localContext,0)


        def declaracao_global(self):
            return self.getTypedRuleContext(LAGrammarParser.Declaracao_globalContext,0)


        def getRuleIndex(self):
            return LAGrammarParser.RULE_decl_local_global

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDecl_local_global" ):
                listener.enterDecl_local_global(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDecl_local_global" ):
                listener.exitDecl_local_global(self)




    def decl_local_global(self):

        localctx = LAGrammarParser.Decl_local_globalContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_decl_local_global)
        try:
            self.state = 71
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 69
                self.declaracao_local()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 70
                self.declaracao_global()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Declaracao_localContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declaracao_variavel(self):
            return self.getTypedRuleContext(LAGrammarParser.Declaracao_variavelContext,0)


        def getRuleIndex(self):
            return LAGrammarParser.RULE_declaracao_local

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaracao_local" ):
                listener.enterDeclaracao_local(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaracao_local" ):
                listener.exitDeclaracao_local(self)




    def declaracao_local(self):

        localctx = LAGrammarParser.Declaracao_localContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_declaracao_local)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 73
            self.match(LAGrammarParser.T__3)
            self.state = 74
            self.declaracao_variavel()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Declaracao_globalContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declaracoes_variaveis(self):
            return self.getTypedRuleContext(LAGrammarParser.Declaracoes_variaveisContext,0)


        def getRuleIndex(self):
            return LAGrammarParser.RULE_declaracao_global

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaracao_global" ):
                listener.enterDeclaracao_global(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaracao_global" ):
                listener.exitDeclaracao_global(self)




    def declaracao_global(self):

        localctx = LAGrammarParser.Declaracao_globalContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_declaracao_global)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 76
            self.match(LAGrammarParser.T__3)
            self.state = 77
            self.declaracoes_variaveis()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Declaracoes_variaveisContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declaracao_variavel(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LAGrammarParser.Declaracao_variavelContext)
            else:
                return self.getTypedRuleContext(LAGrammarParser.Declaracao_variavelContext,i)


        def getRuleIndex(self):
            return LAGrammarParser.RULE_declaracoes_variaveis

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaracoes_variaveis" ):
                listener.enterDeclaracoes_variaveis(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaracoes_variaveis" ):
                listener.exitDeclaracoes_variaveis(self)




    def declaracoes_variaveis(self):

        localctx = LAGrammarParser.Declaracoes_variaveisContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_declaracoes_variaveis)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 79
            self.match(LAGrammarParser.T__3)
            self.state = 80
            self.declaracao_variavel()
            self.state = 85
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==5:
                self.state = 81
                self.match(LAGrammarParser.T__4)
                self.state = 82
                self.declaracao_variavel()
                self.state = 87
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 89
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==6:
                self.state = 88
                self.match(LAGrammarParser.T__5)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Declaracao_variavelContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def identificadores(self):
            return self.getTypedRuleContext(LAGrammarParser.IdentificadoresContext,0)


        def DOISPONTOS(self):
            return self.getToken(LAGrammarParser.DOISPONTOS, 0)

        def tipo(self):
            return self.getTypedRuleContext(LAGrammarParser.TipoContext,0)


        def getRuleIndex(self):
            return LAGrammarParser.RULE_declaracao_variavel

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaracao_variavel" ):
                listener.enterDeclaracao_variavel(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaracao_variavel" ):
                listener.exitDeclaracao_variavel(self)




    def declaracao_variavel(self):

        localctx = LAGrammarParser.Declaracao_variavelContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_declaracao_variavel)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 91
            self.identificadores()
            self.state = 92
            self.match(LAGrammarParser.DOISPONTOS)
            self.state = 93
            self.tipo()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IdentificadoresContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def identificador(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LAGrammarParser.IdentificadorContext)
            else:
                return self.getTypedRuleContext(LAGrammarParser.IdentificadorContext,i)


        def getRuleIndex(self):
            return LAGrammarParser.RULE_identificadores

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIdentificadores" ):
                listener.enterIdentificadores(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIdentificadores" ):
                listener.exitIdentificadores(self)




    def identificadores(self):

        localctx = LAGrammarParser.IdentificadoresContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_identificadores)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 95
            self.identificador()
            self.state = 100
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==5:
                self.state = 96
                self.match(LAGrammarParser.T__4)
                self.state = 97
                self.identificador()
                self.state = 102
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CorpoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declaracao_local(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LAGrammarParser.Declaracao_localContext)
            else:
                return self.getTypedRuleContext(LAGrammarParser.Declaracao_localContext,i)


        def comandos(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LAGrammarParser.ComandosContext)
            else:
                return self.getTypedRuleContext(LAGrammarParser.ComandosContext,i)


        def getRuleIndex(self):
            return LAGrammarParser.RULE_corpo

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCorpo" ):
                listener.enterCorpo(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCorpo" ):
                listener.exitCorpo(self)




    def corpo(self):

        localctx = LAGrammarParser.CorpoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_corpo)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 107
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 4398047106192) != 0):
                self.state = 105
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [4]:
                    self.state = 103
                    self.declaracao_local()
                    pass
                elif token in [7, 10, 12, 16, 19, 42]:
                    self.state = 104
                    self.comandos()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 109
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ComandosContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def comando(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LAGrammarParser.ComandoContext)
            else:
                return self.getTypedRuleContext(LAGrammarParser.ComandoContext,i)


        def getRuleIndex(self):
            return LAGrammarParser.RULE_comandos

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterComandos" ):
                listener.enterComandos(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitComandos" ):
                listener.exitComandos(self)




    def comandos(self):

        localctx = LAGrammarParser.ComandosContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_comandos)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 110
            self.comando()
            self.state = 114
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,7,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 111
                    self.comando() 
                self.state = 116
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,7,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ComandoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def leia_cmd(self):
            return self.getTypedRuleContext(LAGrammarParser.Leia_cmdContext,0)


        def escreva_cmd(self):
            return self.getTypedRuleContext(LAGrammarParser.Escreva_cmdContext,0)


        def atribuicao_cmd(self):
            return self.getTypedRuleContext(LAGrammarParser.Atribuicao_cmdContext,0)


        def chamada_funcao_cmd(self):
            return self.getTypedRuleContext(LAGrammarParser.Chamada_funcao_cmdContext,0)


        def cmd_condicional(self):
            return self.getTypedRuleContext(LAGrammarParser.Cmd_condicionalContext,0)


        def cmd_enquanto(self):
            return self.getTypedRuleContext(LAGrammarParser.Cmd_enquantoContext,0)


        def cmd_para(self):
            return self.getTypedRuleContext(LAGrammarParser.Cmd_paraContext,0)


        def getRuleIndex(self):
            return LAGrammarParser.RULE_comando

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterComando" ):
                listener.enterComando(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitComando" ):
                listener.exitComando(self)




    def comando(self):

        localctx = LAGrammarParser.ComandoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_comando)
        try:
            self.state = 124
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 117
                self.leia_cmd()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 118
                self.escreva_cmd()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 119
                self.atribuicao_cmd()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 120
                self.chamada_funcao_cmd()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 121
                self.cmd_condicional()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 122
                self.cmd_enquanto()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 123
                self.cmd_para()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Leia_cmdContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def identificadores(self):
            return self.getTypedRuleContext(LAGrammarParser.IdentificadoresContext,0)


        def getRuleIndex(self):
            return LAGrammarParser.RULE_leia_cmd

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLeia_cmd" ):
                listener.enterLeia_cmd(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLeia_cmd" ):
                listener.exitLeia_cmd(self)




    def leia_cmd(self):

        localctx = LAGrammarParser.Leia_cmdContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_leia_cmd)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 126
            self.match(LAGrammarParser.T__6)
            self.state = 127
            self.match(LAGrammarParser.T__7)
            self.state = 128
            self.identificadores()
            self.state = 129
            self.match(LAGrammarParser.T__8)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Escreva_cmdContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expressao(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LAGrammarParser.ExpressaoContext)
            else:
                return self.getTypedRuleContext(LAGrammarParser.ExpressaoContext,i)


        def getRuleIndex(self):
            return LAGrammarParser.RULE_escreva_cmd

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEscreva_cmd" ):
                listener.enterEscreva_cmd(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEscreva_cmd" ):
                listener.exitEscreva_cmd(self)




    def escreva_cmd(self):

        localctx = LAGrammarParser.Escreva_cmdContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_escreva_cmd)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 131
            self.match(LAGrammarParser.T__9)
            self.state = 132
            self.match(LAGrammarParser.T__7)
            self.state = 133
            self.expressao(0)
            self.state = 138
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==5:
                self.state = 134
                self.match(LAGrammarParser.T__4)
                self.state = 135
                self.expressao(0)
                self.state = 140
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 141
            self.match(LAGrammarParser.T__8)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Atribuicao_cmdContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def identificador(self):
            return self.getTypedRuleContext(LAGrammarParser.IdentificadorContext,0)


        def expressao(self):
            return self.getTypedRuleContext(LAGrammarParser.ExpressaoContext,0)


        def getRuleIndex(self):
            return LAGrammarParser.RULE_atribuicao_cmd

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAtribuicao_cmd" ):
                listener.enterAtribuicao_cmd(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAtribuicao_cmd" ):
                listener.exitAtribuicao_cmd(self)




    def atribuicao_cmd(self):

        localctx = LAGrammarParser.Atribuicao_cmdContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_atribuicao_cmd)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 143
            self.identificador()
            self.state = 144
            self.match(LAGrammarParser.T__10)
            self.state = 145
            self.expressao(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Chamada_funcao_cmdContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def identificador(self):
            return self.getTypedRuleContext(LAGrammarParser.IdentificadorContext,0)


        def argumentos(self):
            return self.getTypedRuleContext(LAGrammarParser.ArgumentosContext,0)


        def getRuleIndex(self):
            return LAGrammarParser.RULE_chamada_funcao_cmd

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterChamada_funcao_cmd" ):
                listener.enterChamada_funcao_cmd(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitChamada_funcao_cmd" ):
                listener.exitChamada_funcao_cmd(self)




    def chamada_funcao_cmd(self):

        localctx = LAGrammarParser.Chamada_funcao_cmdContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_chamada_funcao_cmd)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 147
            self.identificador()
            self.state = 148
            self.match(LAGrammarParser.T__7)
            self.state = 150
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 136339441844480) != 0):
                self.state = 149
                self.argumentos()


            self.state = 152
            self.match(LAGrammarParser.T__8)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArgumentosContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expressao(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LAGrammarParser.ExpressaoContext)
            else:
                return self.getTypedRuleContext(LAGrammarParser.ExpressaoContext,i)


        def getRuleIndex(self):
            return LAGrammarParser.RULE_argumentos

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArgumentos" ):
                listener.enterArgumentos(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArgumentos" ):
                listener.exitArgumentos(self)




    def argumentos(self):

        localctx = LAGrammarParser.ArgumentosContext(self, self._ctx, self.state)
        self.enterRule(localctx, 30, self.RULE_argumentos)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 154
            self.expressao(0)
            self.state = 159
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==5:
                self.state = 155
                self.match(LAGrammarParser.T__4)
                self.state = 156
                self.expressao(0)
                self.state = 161
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Cmd_condicionalContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expressao(self):
            return self.getTypedRuleContext(LAGrammarParser.ExpressaoContext,0)


        def comandos(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LAGrammarParser.ComandosContext)
            else:
                return self.getTypedRuleContext(LAGrammarParser.ComandosContext,i)


        def getRuleIndex(self):
            return LAGrammarParser.RULE_cmd_condicional

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCmd_condicional" ):
                listener.enterCmd_condicional(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCmd_condicional" ):
                listener.exitCmd_condicional(self)




    def cmd_condicional(self):
